# llm-finetune

./: .gitignore  README.md  outputs  pyproject.toml
config/: config.yaml  config_gpt2_large.yaml  config_gpt2_medium.yaml  config_gpt2_xl.yaml  config_no_deepspeed.yaml  config_small_batch.yaml  config_zero3.yaml
config/deepspeed/: ds_config_zero2_offload_optimizer.json  ds_config_zero3.json
config/ds_config/: ds_config_zero2.json
config/training_config/: no_ds.yaml  zero1.yaml
notebook/: cord19_dataset_overview.ipynb  gpt-2-small_results.ipynb  gpt2_results.ipynb
scripts/: run.sh
src/llm_finetune/: __init__.py  dataset.py  estimate_mem.py  temp.py  train.py
wandb/: latest-run
wandb/run-20240807_183851-3j19jwul/: run-3j19jwul.wandb
wandb/run-20240807_183851-3j19jwul/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20240807_190615-yb6wjjow/: run-yb6wjjow.wandb
wandb/run-20240807_190615-yb6wjjow/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
wandb/run-20240807_191243-x6q0bdpo/: run-x6q0bdpo.wandb
wandb/run-20240807_191243-x6q0bdpo/files/: config.yaml  wandb-metadata.json  wandb-summary.json
